Добавлено 1е задание ДЗ

--- a/WebStore/Views/Home/EmployeeDetails.cshtml
+++ b/WebStore/Views/Home/EmployeeDetails.cshtml
@@ -26,6 +26,10 @@
         <td>@Model.Position</td>
     </tr>
     <tr>
+        <td>День рождения</td>
+        <td>@Model.BirthDay</td>
+    </tr>
+    <tr>
         @Html.ActionLink("Назад", "Employees")
     </tr>
 </table>
