--- a/WebStore/Views/Shared/_Header.cshtml
+++ b/WebStore/Views/Shared/_Header.cshtml
@@ -7,8 +7,8 @@
                 <div class="col-sm-6">
                     <div class="contactinfo">
                         <ul class="nav nav-pills">
-                            <li><a href="#"><i class="fa fa-phone"></i> +7 123 456 78 90</a></li>
-                            <li><a href="#"><i class="fa fa-envelope"></i> info@domain.ru</a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
+                            <li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                             <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
                             <li><a asp-controller="Home" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                            <li><a asp-controller="Home" asp-action="login"><i class="fa fa-lock"></i> Login</a></li>
+                            <li><a asp-controller="Home" asp-action="Login"><i class="fa fa-lock"></i> Login</a></li>
                         </ul>
                     </div>
                 </div>
@@ -89,28 +89,26 @@
                     </div>
                     <div class="mainmenu pull-left">
                         <ul class="nav navbar-nav collapse navbar-collapse">
-                            <li>
-                                <a asp-controller="Home" asp-action="Index" class="active">Home</a>
-                            </li>
+                            <li><a asp-controller="Home" asp-action="Index" class="active">Home</a></li>
                             <li class="dropdown">
-                                <a href="#">Shop<i class="fa fa-angle-down"></i></a>
+                                <a asp-controller="Home" asp-action="Shop">Shop<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
-                                    <li><a asp-controller="Home" asp-action="shop">Products</a></li>
-                                    <li><a asp-controller="Home" asp-action="productDetails">Product Details</a></li>
-                                    <li><a asp-controller="Home" asp-action="checkout">Checkout</a></li>
-                                    <li><a asp-controller="Home" asp-action="cart">Cart</a></li>
-                                    <li><a asp-controller="Home" asp-action="login">Login</a></li>
+                                    <li><a asp-controller="Home" asp-action="Shop">Products</a></li>
+                                    <li><a asp-controller="Home" asp-action="ProductDetails">Product Details</a></li>
+                                    <li><a asp-controller="Home" asp-action="Checkout">Checkout</a></li>
+                                    <li><a asp-controller="Home" asp-action="Cart">Cart</a></li>
+                                    <li><a asp-controller="Home" asp-action="Login">Login</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a asp-controller="Home" asp-action="Blog">Blog<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
-                                    <li><a asp-controller="Home" asp-action="blog">Blog List</a></li>
-                                    <li><a asp-controller="Home" asp-action="blogSingle">Blog Single</a></li>
+                                    <li><a asp-controller="Home" asp-action="Blog">Blog List</a></li>
+                                    <li><a asp-controller="Home" asp-action="BlogSingle">Blog Single</a></li>
                                 </ul>
                             </li>
-                            <li><a asp-controller="Home" asp-action="notFound">404</a></li>
-                            <li><a asp-controller="Home" asp-action="contactUs">Contact</a></li>
+                            <li><a asp-controller="Home" asp-action="NotFound">404</a></li>
+                            <li><a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
                             <li><a asp-controller="Employee" asp-action="Employees">Employees</a></li>
                         </ul>
                     </div>
