--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | E-Shopper</title>
+    <title>@ViewData["Title"]</title>
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/css/prettyPhoto.css" rel="stylesheet">
@@ -15,33 +15,26 @@
     <link href="~/css/responsive.css" rel="stylesheet">
     <!--Секция для отображения кастомных стилей, если понадобятся-->
     @RenderSection("styles", false)
-
     <!--[if lt IE 9]>
-    <script src="~/js/html5shiv.js"></script>
-    <script src="~/js/respond.min.js"></script>
+        <script src="~/js/html5shiv.js"></script>
     <![endif]-->
-    <link rel="shortcut icon" href="~/images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="~/images/ico/apple-touch-icon-57-precomposed.png">
-</head><!--/head-->
-
+</head>
 <body>
     @await Html.PartialAsync("_Header")
 
-    @RenderBody()
+    <div class="container">
+        @RenderBody()
+    </div>
 
     @await Html.PartialAsync("_Footer")
 
-    <script src="~/js/jquery.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
     <script src="~/js/jquery.scrollUp.min.js"></script>
     <script src="~/js/price-range.js"></script>
     <script src="~/js/jquery.prettyPhoto.js"></script>
     <script src="~/js/main.js"></script>
     <!--Секция для отображения кастомных скриптов, если понадобятся-->
     @RenderSection("scripts", false)
-
 </body>
 </html>
