Добавлен мой список

--- a/WebStore/Views/Shared/_Header.cshtml
+++ b/WebStore/Views/Shared/_Header.cshtml
@@ -110,6 +110,7 @@
                             <li><a asp-controller="Home" asp-action="NotFound">404</a></li>
                             <li><a asp-controller="Home" asp-action="ContactUs">Contact</a></li>
                             <li><a asp-controller="Employee" asp-action="Employees">Employees</a></li>
+                            <li><a asp-controller="Steel" asp-action="Steels">Steels</a></li>
                         </ul>
                     </div>
                 </div>
