--- a/WebStore/Views/Catalog/Shop.cshtml
+++ b/WebStore/Views/Catalog/Shop.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model WebStore.ViewModels.CatalogViewModel
+
 @{
     ViewData["Title"] = "Shop";
 }
@@ -11,7 +12,7 @@
             @await Html.PartialAsync("_Partial/_LeftSideBar")
         </div>
         <div class="col-sm-9 padding-right">
-            @await Html.PartialAsync("_Partial/_FeaturedItems")
+            @await Html.PartialAsync("_Partial/_FeaturedItems", Model.Products)
             <ul class="pagination">
                 <li class="active"><a href="">1</a></li>
                 <li><a href="">2</a></li>
