--- a/WebStore/Views/Home/Index.cshtml
+++ b/WebStore/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             @await Html.PartialAsync("_Partial/_LeftSideBar")
         </div>
         <div class="col-sm-9 padding-right">
-            @await Html.PartialAsync("_Partial/_FeaturedItems")
+            @*@await Html.PartialAsync("_Partial/_FeaturedItems")*@
             @await Html.PartialAsync("_Partial/_CategoryTab")
             @await Html.PartialAsync("_Partial/_RecommendedItems")
         </div>
