--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -6,13 +6,23 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>@ViewData["Title"]</title>
+
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/font-awesome.min.css" rel="stylesheet">
-    <link href="~/css/prettyPhoto.css" rel="stylesheet">
-    <link href="~/css/price-range.css" rel="stylesheet">
-    <link href="~/css/animate.css" rel="stylesheet">
     <link href="~/css/main.css" rel="stylesheet">
-    <link href="~/css/responsive.css" rel="stylesheet">
+    <link href="~/css/prettyPhoto.css" rel="stylesheet">
+
+    <environment include="Development">        
+        <link href="~/css/price-range.css" rel="stylesheet">
+        <link href="~/css/animate.css" rel="stylesheet">
+        <link href="~/css/responsive.css" rel="stylesheet">
+    </environment>
+
+    <environment exclude="Development">        
+        <link href="~/css/site.min.css" rel="stylesheet" asp-append-version="true">
+    </environment>
+
+
     <!--Секция для отображения кастомных стилей, если понадобятся-->
     @RenderSection("styles", false)
     <!--[if lt IE 9]>
@@ -28,12 +38,17 @@
 
     @await Html.PartialAsync("_Footer")
 
-    <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery/jquery.js"></script>
+    <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
     <script src="~/js/jquery.scrollUp.min.js"></script>
-    <script src="~/js/price-range.js"></script>
-    <script src="~/js/jquery.prettyPhoto.js"></script>
-    <script src="~/js/main.js"></script>
+    <environment include="Development">
+        <script src="~/js/price-range.js"></script>
+        <script src="~/js/jquery.prettyPhoto.js"></script>
+        <script src="~/js/main.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
+    </environment>
     <!--Секция для отображения кастомных скриптов, если понадобятся-->
     @RenderSection("scripts", false)
 </body>
