--- a/WebStore/Views/Catalog/ProductDetails.cshtml
+++ b/WebStore/Views/Catalog/ProductDetails.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "ProductDetails";
+﻿@model WebStore.ViewModels.ProductViewModel
+
+@{
+    ViewData["Title"] = "Товар: " + Model.Name;
 }
 
 <section>
@@ -12,7 +14,7 @@
                 <!--product-details-->
                 <div class="col-sm-5">
                     <div class="view-product">
-                        <img src="~/images/product-details/1.jpg" alt="" />
+                        <img src="~/images/shop/@Model.ImageUrl" alt="" />
                         <h3>ZOOM</h3>
                     </div>
                     <div id="similar-product" class="carousel slide" data-ride="carousel">
@@ -51,21 +53,23 @@
                     <div class="product-information">
                         <!--/product-information-->
                         <img src="~/images/product-details/new.jpg" class="newarrival" alt="" />
-                        <h2>Anne Klein Sleeveless Colorblock Scuba</h2>
+                        <h2>@Model.Name</h2>
                         <p>Web ID: 1089772</p>
                         <img src="~/images/product-details/rating.png" alt="" />
                         <span>
-                            <span>US $59</span>
+                            <span>@Model.Price.ToString("C")</span>
                             <label>Quantity:</label>
                             <input type="text" value="3" />
-                            <button type="button" class="btn btn-fefault cart">
-                                <i class="fa fa-shopping-cart"></i>
-                                Add to cart
-                            </button>
+
+                            <a asp-controller="Cart" asp-action="AddToCart"
+                               asp-route-id="@Model.Id"
+                               asp-route-returnUrl="@Context.Request.Path"
+                               class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
+
                         </span>
                         <p><b>Availability:</b> In Stock</p>
                         <p><b>Condition:</b> New</p>
-                        <p><b>Brand:</b> E-SHOPPER</p>
+                        <p><b>Brand:</b> @Model.BrandName</p>
                         <a href=""><img src="~/images/product-details/share.png" class="share img-responsive" alt="" /></a>
                     </div><!--/product-information-->
                 </div>
@@ -76,4 +80,5 @@
         </div>
     </div>
 </section>
+
 
