--- a/WebStore/Views/Shared/_Partial/_FeaturedItems.cshtml
+++ b/WebStore/Views/Shared/_Partial/_FeaturedItems.cshtml
@@ -20,7 +20,7 @@
                            asp-route-returnUrl="@Context.Request.Path"
                            class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
                     </div>
-                    @*<div class="product-overlay"> //шторка
+                    @*<div class="product-overlay">
                             <div class="overlay-content">
                                 <h2>@item.Price.ToString("C")</h2>
                                 <p>@item.Name</p>
